<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_uav_application</name>
  <version>0.0.0</version>
  <description>Application-specific implementations for the ros_gz_project example</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>angles</depend>

  <!-- SBPL dependencies -->
  <depend>sbpl</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

